[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Market/Pannel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.223529, 0.470588, 0.898039, 1 )
margin_left = 516.0
margin_top = 184.0
margin_right = 766.0
margin_bottom = 534.0
rect_min_size = Vector2( 250, 350 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 250.0
margin_bottom = 348.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyLbl" type="Label" parent="Panel/VBoxContainer"]
margin_top = 17.0
margin_right = 250.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "BUY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 250.0
margin_bottom = 124.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLbl" type="Label" parent="Panel/VBoxContainer"]
margin_top = 128.0
margin_right = 250.0
margin_bottom = 142.0
text = "Player Name:"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 146.0
margin_right = 250.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 2 )

[node name="PlayerNameLbl" type="Label" parent="Panel/VBoxContainer"]
margin_top = 152.0
margin_right = 250.0
margin_bottom = 166.0
text = "Nabil Fekir"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 170.0
margin_right = 250.0
margin_bottom = 190.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLbl" type="Label" parent="Panel/VBoxContainer"]
margin_top = 194.0
margin_right = 250.0
margin_bottom = 208.0
text = "Price:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 212.0
margin_right = 250.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 2 )

[node name="PriceIntLbl" type="Label" parent="Panel/VBoxContainer"]
margin_top = 218.0
margin_right = 250.0
margin_bottom = 232.0
text = "15.000 euros"
align = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 236.0
margin_right = 250.0
margin_bottom = 256.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 250.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 5 )

[node name="notification" type="Label" parent="Panel/VBoxContainer"]
margin_top = 269.0
margin_right = 250.0
margin_bottom = 283.0
align = 1

[node name="MarginContainer6" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 287.0
margin_right = 250.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 306.0
margin_right = 250.0
margin_bottom = 331.0
alignment = 1

[node name="BackBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 128.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="BuyBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 177.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "BUY"

[node name="SellBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 154.0
margin_right = 204.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.294118, 0.415686, 0.898039, 1 )
text = "SELL"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/BuyBtn" to="." method="_on_BuyBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SellBtn" to="." method="_on_SellBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
